added devices controller

--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -6,7 +6,7 @@
 
 <div class="example-wrapper">
     {% for user in users %}
-        <div>{{ user.first_name|e }}</div>
+        <div>{{ user.firstname|e }}</div>
     {% endfor %}
 </div>
 {% endblock %}
