implemented add/assign/remove program

--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -6,14 +6,17 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-4">
+            <div class="col-3">
                 <a href="{{ path('new_user') }}" class="btn btn-primary">Add new user</a>
             </div>
-            <div class="col-4">
+            <div class="col-3">
                 <a href="{{ path('new_device') }}" class="btn btn-primary">Add device</a>
             </div>
-            <div class="col-4">
+            <div class="col-3">
                 <a href="{{ path('devices') }}" class="btn btn-primary">View all devices</a>
+            </div>
+            <div class="col-3">
+                <a href="{{ path('programs') }}" class="btn btn-primary">View all programs</a>
             </div>
         </div>
 
