--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+
+            {{ encore_entry_link_tags('app') }}
+
+        {% endblock %}
 
         {% block head_css %}
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -15,7 +19,18 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block body %}
+            <div id="app">
+
+                {% block content %}{% endblock %}
+
+            </div>
+
+        {% endblock %}
+        {% block javascripts %}
+
+            {{ encore_entry_script_tags('app') }}
+
+        {% endblock %}
     </body>
 </html>
